--- a/ajite/ajite/Storyboards/Base.lproj/Main.storyboard
+++ b/ajite/ajite/Storyboards/Base.lproj/Main.storyboard
@@ -872,32 +872,13 @@
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="ctr-6i-NX8">
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="763"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <color key="backgroundColor" red="0.91047342414529919" green="0.90169270830000003" blue="0.93120659719999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                             </imageView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="tUv-1u-85N">
                                 <rect key="frame" x="0.0" y="133" width="375" height="679"/>
                                 <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="AjiteName" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yMw-Ha-biV">
-                                        <rect key="frame" x="20" y="111.66666666666666" width="133.33333333333334" height="35"/>
-                                        <constraints>
-                                            <constraint firstAttribute="height" constant="35" id="LTa-qH-CFe"/>
-                                        </constraints>
-                                        <fontDescription key="fontDescription" name="ProximaNovaA-Bold" family="Proxima Nova Alt" pointSize="29"/>
-                                        <color key="textColor" red="0.51139467949999995" green="0.57121837139999998" blue="0.73861511749999997" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hY1-eR-1M6">
-                                        <rect key="frame" x="264" y="104" width="95" height="50"/>
-                                        <constraints>
-                                            <constraint firstAttribute="width" constant="95" id="zRe-Tf-fPN"/>
-                                        </constraints>
-                                        <state key="normal" image="share-pink"/>
-                                        <connections>
-                                            <segue destination="YTT-Lv-6TJ" kind="presentation" id="xEi-qz-IQe"/>
-                                        </connections>
-                                    </button>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="JY2-Bh-xfF" userLabel="Shared Songs CV view">
-                                        <rect key="frame" x="0.0" y="373" width="375" height="232"/>
+                                        <rect key="frame" x="0.0" y="309" width="375" height="384"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Shared Songs" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6r9-pg-765">
                                                 <rect key="frame" x="20" y="8" width="131.33333333333334" height="24"/>
@@ -1031,7 +1012,7 @@
                                             <constraint firstAttribute="trailing" secondItem="nPd-RD-SgJ" secondAttribute="trailing" id="aQx-25-fvI"/>
                                             <constraint firstItem="nPd-RD-SgJ" firstAttribute="leading" secondItem="JY2-Bh-xfF" secondAttribute="leading" id="cZe-Ul-msG"/>
                                             <constraint firstItem="nPd-RD-SgJ" firstAttribute="centerX" secondItem="JY2-Bh-xfF" secondAttribute="centerX" id="i3h-GZ-LdB"/>
-                                            <constraint firstItem="nPd-RD-SgJ" firstAttribute="centerY" secondItem="JY2-Bh-xfF" secondAttribute="centerY" id="tMy-1r-wlL"/>
+                                            <constraint firstItem="nPd-RD-SgJ" firstAttribute="centerY" secondItem="JY2-Bh-xfF" secondAttribute="centerY" constant="-76" id="tMy-1r-wlL"/>
                                             <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="6r9-pg-765" secondAttribute="trailing" constant="20" symbolic="YES" id="yex-2p-0bU"/>
                                         </constraints>
                                         <userDefinedRuntimeAttributes>
@@ -1040,18 +1021,42 @@
                                             </userDefinedRuntimeAttribute>
                                         </userDefinedRuntimeAttributes>
                                     </view>
+                                    <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Pwg-cT-blB">
+                                        <rect key="frame" x="18" y="88" width="339" height="213"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                    </view>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="AjiteName" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yMw-Ha-biV">
+                                        <rect key="frame" x="18" y="27.666666666666657" width="139.33333333333334" height="35"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="35" id="LTa-qH-CFe"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" name="ProximaNovaA-Bold" family="Proxima Nova Alt" pointSize="29"/>
+                                        <color key="textColor" red="0.27684453129999997" green="0.32316142320000002" blue="0.45883959530000001" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hY1-eR-1M6">
+                                        <rect key="frame" x="262" y="20" width="95" height="50"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="95" id="zRe-Tf-fPN"/>
+                                        </constraints>
+                                        <state key="normal" image="share-navy"/>
+                                        <connections>
+                                            <segue destination="YTT-Lv-6TJ" kind="presentation" identifier="shareSong" id="xEi-qz-IQe"/>
+                                        </connections>
+                                    </button>
                                 </subviews>
                                 <constraints>
                                     <constraint firstItem="hY1-eR-1M6" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="yMw-Ha-biV" secondAttribute="trailing" constant="8" symbolic="YES" id="MSj-hc-jau"/>
                                     <constraint firstItem="JY2-Bh-xfF" firstAttribute="leading" secondItem="tUv-1u-85N" secondAttribute="leading" id="PS0-Ea-CR1"/>
                                     <constraint firstItem="yMw-Ha-biV" firstAttribute="centerY" secondItem="hY1-eR-1M6" secondAttribute="centerY" id="T3T-tj-GkJ"/>
-                                    <constraint firstAttribute="trailing" secondItem="hY1-eR-1M6" secondAttribute="trailing" constant="16" id="WRC-rM-5Gz"/>
-                                    <constraint firstItem="yMw-Ha-biV" firstAttribute="leading" secondItem="tUv-1u-85N" secondAttribute="leading" constant="20" id="ZkS-tI-tpF"/>
-                                    <constraint firstItem="hY1-eR-1M6" firstAttribute="top" secondItem="tUv-1u-85N" secondAttribute="top" constant="104" id="b1O-qv-X6p"/>
+                                    <constraint firstAttribute="trailing" secondItem="hY1-eR-1M6" secondAttribute="trailing" constant="18" id="WRC-rM-5Gz"/>
+                                    <constraint firstItem="yMw-Ha-biV" firstAttribute="leading" secondItem="tUv-1u-85N" secondAttribute="leading" constant="18" id="ZkS-tI-tpF"/>
+                                    <constraint firstItem="hY1-eR-1M6" firstAttribute="top" secondItem="tUv-1u-85N" secondAttribute="top" constant="20" id="b1O-qv-X6p"/>
                                     <constraint firstItem="JY2-Bh-xfF" firstAttribute="leading" secondItem="tUv-1u-85N" secondAttribute="leading" id="ocC-nV-DrD"/>
                                     <constraint firstAttribute="trailing" secondItem="JY2-Bh-xfF" secondAttribute="trailing" id="qog-pI-kPJ"/>
                                     <constraint firstAttribute="trailing" secondItem="JY2-Bh-xfF" secondAttribute="trailing" id="sdP-JH-hgM"/>
-                                    <constraint firstItem="JY2-Bh-xfF" firstAttribute="top" secondItem="hY1-eR-1M6" secondAttribute="bottom" constant="219" id="uyO-5A-eAP"/>
+                                    <constraint firstItem="JY2-Bh-xfF" firstAttribute="top" secondItem="hY1-eR-1M6" secondAttribute="bottom" constant="239" id="uyO-5A-eAP"/>
                                 </constraints>
                                 <userDefinedRuntimeAttributes>
                                     <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
@@ -1077,7 +1082,7 @@
                     </view>
                     <navigationItem key="navigationItem" id="514-pZ-nVD">
                         <barButtonItem key="rightBarButtonItem" title="Members" image="person.3" catalog="system" id="F2e-iI-NWZ">
-                            <color key="tintColor" red="0.95259529350000005" green="0.85809397700000001" blue="0.91373091939999995" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                            <color key="tintColor" red="0.27684453129999997" green="0.32316142320000002" blue="0.45883959530000001" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                             <connections>
                                 <action selector="pressedMembers:" destination="AeW-qZ-H78" id="EV1-Uu-z54"/>
                             </connections>
@@ -1857,7 +1862,7 @@
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="eW0-nC-tmr">
-                                                <rect key="frame" x="284" y="-13" width="91" height="51"/>
+                                                <rect key="frame" x="284" y="-7" width="91" height="45"/>
                                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                 <state key="normal" image="addnavy"/>
                                                 <connections>
@@ -1881,7 +1886,7 @@
                                         </constraints>
                                     </view>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="UserName" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tTo-69-zUc">
-                                        <rect key="frame" x="116.33333333333333" y="25" width="142.33333333333337" height="35"/>
+                                        <rect key="frame" x="114.66666666666667" y="24.999999999999996" width="145.66666666666663" height="36.666666666666657"/>
                                         <fontDescription key="fontDescription" name="ProximaNovaA-Bold" family="Proxima Nova Alt" pointSize="30"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
@@ -2168,8 +2173,8 @@
     </scenes>
     <inferredMetricsTieBreakers>
         <segue reference="sSf-ko-tPJ"/>
-        <segue reference="YzI-Ue-2oM"/>
-        <segue reference="RTc-KO-dhc"/>
+        <segue reference="MaB-sY-zyl"/>
+        <segue reference="ZOl-UM-4IR"/>
     </inferredMetricsTieBreakers>
     <resources>
         <image name="addblue" width="100" height="50"/>
@@ -2191,7 +2196,7 @@
         <image name="plus" catalog="system" width="128" height="113"/>
         <image name="plus-navy" width="200" height="200"/>
         <image name="settings-navy" width="30" height="30"/>
-        <image name="share-pink" width="100" height="50"/>
+        <image name="share-navy" width="100" height="50"/>
         <image name="square" catalog="system" width="128" height="114"/>
         <image name="youtube-navy" width="200" height="200"/>
     </resources>
